--- a/style.scss
+++ b/style.scss
@@ -286,9 +286,28 @@ a {
     right: -35rem;
     border-radius: 50% 50%;
     border-top-left-radius: 90%;
+    border-bottom-left-radius: 70%;
     transform: rotateX(50%);
     background-color: #e3051b;
     z-index: -100;
+  }
+  .btn {
+    background-color: #e3051b;
+  }
+  .btn:hover {
+    background-color: #b60416;
+  }
+  .pa-1 {
+    color: #0f253b;
+    font-weight: bolder;
+    font-size: 18px;
+  }
+  .carousel-control-next-icon {
+    font-weight: bold;
+  }
+  i {
+    top: -60px;
+    left: 20px;
   }
 }
 .section-4 {
@@ -297,7 +316,7 @@ a {
     color: #e3051b;
     font-weight: bolder;
   }
-  .p-1 {
+  .pa-1 {
     color: #0f253b;
     font-weight: bolder;
     font-size: 18px;
@@ -321,7 +340,41 @@ a {
   .par-2 {
     font-size: 14px;
   }
-  .p-2 span {
-    font-weight: bolder;
+}
+footer {
+  background-color: #e3051b;
+  border-top-right-radius: 43%;
+  border-top-left-radius: 18%;
+  height: 300px;
+  z-index: -100;
+}
+
+.col-7 .col:hover {
+  color: #b60416 !important;
+  cursor: pointer;
+}
+.col-5 i:hover {
+  color: #b60416;
+  cursor: pointer;
+}
+
+footer-end {
+  z-index: 10000;
+  .container-fluid {
+    background-color: #b60416;
+    border-top-right-radius: 14%;
+    border-top-left-radius: 20%;
+
+    top: -100px;
+    left: 0;
+  }
+
+  .col {
+    font-size: 9px;
+    font-weight: bold;
+  }
+  .col-4:hover {
+    color: #df505e;
+    cursor: pointer;
   }
 }
